<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.lzpeng.surveyor.main.horizontal.HorizontalActivity">
    <item
        android:id="@+id/action_import_data_by_text"
        android:orderInCategory="100"
        android:title="@string/action_import_data_by_text"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import_data_by_excel"
        android:orderInCategory="100"
        android:title="@string/action_import_data_by_excel"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_setting_param"
        android:orderInCategory="100"
        android:title="@string/action_setting_param"
        app:showAsAction="never" />
</menu>
