<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/action_add_road"
        android:textColor="@android:color/black"
        android:textSize="25dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatRadioButton

            android:id="@+id/rb_jd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/method_jd"
            android:textColor="@android:color/black"
            android:textSize="20dp" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/rb_lines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/method_lines"
            android:textColor="@android:color/black"
            android:textSize="20dp" />
    </RadioGroup>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_road_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/road_name"
                android:inputType="textPersonName"
                tools:ignore="HardcodedText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_road_name_prefix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/road_name_prefix"
                android:inputType="textPersonName"
                tools:ignore="HardcodedText" />

        </android.support.design.widget.TextInputLayout>
    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="right"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="36dp"
            android:text="@string/btn_cancel"
            android:textColor="@color/colorAccent"
            android:textSize="20dp" />


        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="36dp"
            android:text="@string/btn_ok"
            android:textColor="@color/colorAccentDark"
            android:textSize="20dp" />
    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v7.widget.LinearLayoutCompat>