<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar"></include>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_photo_scale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/photo_scale"
            android:inputType="numberDecimal|numberSigned"
            tools:ignore="HardcodedText" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_photo_x0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/photo_x0"
            android:inputType="numberDecimal|numberSigned"
            tools:ignore="HardcodedText" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_photo_y0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/photo_y0"
            android:inputType="numberDecimal|numberSigned"
            tools:ignore="HardcodedText" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edit_photo_f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/photo_f"
            android:inputType="numberDecimal|numberSigned"
            tools:ignore="HardcodedText" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:background="@color/app_main"
        android:gravity="center"
        android:text="@string/text_save"
        android:textSize="25sp" />
</android.support.v7.widget.LinearLayoutCompat>